kubevirt/okd-console/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: console-service
  namespace: kube-system
spec:
  selector:
    app: console
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
